--- a/blog/2025-07-08-why-companies-are-leaving-cloud.mdx
+++ b/blog/2025-07-08-why-companies-are-leaving-cloud.mdx
@@ -1,7 +1,7 @@
 ---
 slug: why-companies-are-leaving-cloud
-title: Why Companies Are Leaving the Cloud
-authors: [Francis]
+title: Why Companies Are Leaving the Cloud in Masses
+authors: [francis]
 tags: [cloud, infrastructure, devops, cost-optimization]
 date: 2025-07-08
 ---
@@ -21,21 +21,23 @@ According to recent surveys, **84% of enterprises** report cloud costs exceeding
 Cloud costs can spiral out of control faster than you think. Here's the breakdown:
 
 :::danger Critical Cost Factors
+
 ### Primary Cost Drivers
+
 - **Unpredictable billing** - Usage spikes can lead to shocking bills
-- **Data transfer fees** - Moving data in and out gets expensive  
+- **Data transfer fees** - Moving data in and out gets expensive
 - **Over-provisioning** - Paying for unused resources
 - **Hidden costs** - Storage, bandwidth, API calls add up
-:::
+  :::
 
 ### 📊 Cost Comparison Example
 
-| Service Type | AWS Cost/Month | On-Prem Cost/Month | Annual Savings |
-|--------------|----------------|-------------------|----------------|
-| Compute (100 instances) | $15,000 | $8,000 | $84,000 |
-| Storage (500TB) | $12,000 | $3,000 | $108,000 |
-| Data Transfer | $8,000 | $500 | $90,000 |
-| **Total** | **$35,000** | **$11,500** | **$282,000** |
+| Service Type            | AWS Cost/Month | On-Prem Cost/Month | Annual Savings |
+| ----------------------- | -------------- | ------------------ | -------------- |
+| Compute (100 instances) | $15,000        | $8,000             | $84,000        |
+| Storage (500TB)         | $12,000        | $3,000             | $108,000       |
+| Data Transfer           | $8,000         | $500               | $90,000        |
+| **Total**               | **$35,000**    | **$11,500**        | **$282,000**   |
 
 :::info Pro Tip
 These numbers are based on real-world case studies from companies like Dropbox and Basecamp.
@@ -51,3 +53,4 @@ Before: AWS-hosted file storage
 After:  Custom-built "Magic Pocket" infrastructure
 Savings: $75 million over 2 years
 Performance: 2x faster file access
+```
