--- a/blog/2025-07-08-why-companies-are-leaving-cloud.mdx
+++ b/blog/2025-07-08-why-companies-are-leaving-cloud.mdx
@@ -16,7 +16,7 @@ According to recent surveys, **84% of enterprises** report cloud costs exceeding
 
 <!--truncate-->
 
-## 💰 The Cost Reality: When Bills Spiral Out of Control
+### 💰 The Cost Reality: When Bills Spiral Out of Control
 
 Cloud costs can spiral out of control faster than you think. Here's the breakdown:
 
