--- a/blog/2025-07-08-why-companies-are-leaving-cloud.mdx
+++ b/blog/2025-07-08-why-companies-are-leaving-cloud.mdx
@@ -2,7 +2,7 @@
 slug: why-companies-are-leaving-cloud
 title: Why Companies Are Leaving the Cloud in Masses
 authors: [francis]
-tags: [cloud, infrastructure, DevOps, cost-optimization]
+tags: [cloud, infrastructure, devops, cost-optimization]
 date: 2025-07-08
 ---
 
@@ -89,23 +89,15 @@ While the cloud offers **pay-as-you-go flexibility**, many organizations find th
 
 ### 🗃️ Dropbox: Built the "Magic Pocket"
 
-```
-# Dropbox's Infrastructure Transformation
-Before: AWS-hosted file storage
-After:  Custom-built "Magic Pocket" infrastructure
-Savings: $75 million over 2 years
-Performance: 2x faster file access
-```
+Dropbox transformed its infrastructure by migrating from AWS-hosted file storage to their custom-built "Magic Pocket" infrastructure, achieving $75 million in savings over 2 years while delivering 2x faster file access performance.
 
 ### 📦 Basecamp: Rejected the Cloud Trend
 
-- Moved off cloud citing runaway costs and complexity
-- Emphasized simplicity, predictability, and infrastructure ownership
+Basecamp moved off cloud citing runaway costs and complexity, emphasizing simplicity, predictability, and infrastructure ownership over cloud dependency.
 
 ### 🧪 37signals: Built "ONCE"
 
-- Created bare-metal tools tailored to their workloads
-- Found cloud inefficient for long-lived, stable applications
+37signals created bare-metal tools tailored to their workloads, finding cloud inefficient for long-lived, stable applications that benefit from dedicated infrastructure.
 
 :::note Key Insight
 These cases highlight that cloud isn't bad, but it isn't universally optimal.
@@ -142,10 +134,4 @@ Cloud isn't dead — it's just maturing. The winners are those who understand th
 
 ## 🔚 Conclusion: It's About Control, Not Rejection
 
-Cloud repatriation isn't rebellion — it's a **rebalancing act**.
-
-Companies aren't abandoning the cloud; they're **reclaiming financial and operational control**.
-
-The question isn't _"Should you be in the cloud?"_
-
-It's: _"Where should each of your workloads live to optimize cost, performance, and control?"_
+Cloud repatriation isn't rebellion — it's a **rebalancing act** where companies aren't abandoning the cloud but rather **reclaiming financial and operational control**. The question isn't _"Should you be in the cloud?"_ but rather _"Where should each of your workloads live to optimize cost, performance, and control?"_
