--- a/blog/2025-07-08-why-companies-are-leaving-cloud.mdx
+++ b/blog/2025-07-08-why-companies-are-leaving-cloud.mdx
@@ -6,6 +6,8 @@ tags: [cloud, infrastructure, devops, cost-optimization]
 date: 2025-07-08
 ---
 
+import GiscusComments from "@site/src/components/GiscusComments";
+
 # 🌥️ Why Companies Are Leaving the Cloud
 
 The cloud revolution promised **unlimited scalability**, **reduced costs**, and **simplified operations**. But a growing number of companies are now questioning that promise and executing what's known as **"cloud repatriation"** — moving back to on-premises infrastructure.
@@ -135,3 +137,7 @@ Cloud isn't dead — it's just maturing. The winners are those who understand th
 ## 🔚 Conclusion: It's About Control, Not Rejection
 
 Cloud repatriation isn't rebellion — it's a **rebalancing act** where companies aren't abandoning the cloud but rather **reclaiming financial and operational control**. The question isn't _"Should you be in the cloud?"_ but rather _"Where should each of your workloads live to optimize cost, performance, and control?"_
+
+## 💬 Comments
+
+<GiscusComments />
