--- a/blog/2025-07-25-From Chaos to Clarity: How Lucidscale Turned Our 40-Service Nightmare Into a Visual Masterpiece.mdx
+++ b/blog/2025-07-25-From Chaos to Clarity: How Lucidscale Turned Our 40-Service Nightmare Into a Visual Masterpiece.mdx
@@ -1,7 +1,17 @@
 ---
 slug: lucidscale-enterprise-cloud-visualization-guide
-title: From Chaos to Clarity: How Lucidscale Turned Our 40-Service Nightmare Into a Visual Masterpiece
+title: "From Chaos to Clarity: How Lucidscale Turned Our 40-Service Nightmare Into a Visual Masterpiece"
 authors: [francis]
-tags: [lucidscale, aws, cloud-architecture, enterprise, microservices, disaster-recovery, visualization, lucidchart]
+tags:
+  [
+    lucidscale,
+    aws,
+    cloud-architecture,
+    enterprise,
+    microservices,
+    disaster-recovery,
+    visualization,
+    lucidchart,
+  ]
 date: 2025-07-27
 ---
