--- a/blog/2025-07-25-From Chaos to Clarity: How Lucidscale Turned Our 40-Service Nightmare Into a Visual Masterpiece.mdx
+++ b/blog/2025-07-25-From Chaos to Clarity: How Lucidscale Turned Our 40-Service Nightmare Into a Visual Masterpiece.mdx
@@ -16,12 +16,14 @@ tags:
 date: 2025-07-27
 ---
 
+import GiscusComments from "@site/src/components/GiscusComments";
+
 import { useState } from "react";
 
 # From Chaos to Clarity: How Lucidscale Turned Our 40-Service Nightmare Into a Visual Masterpiece
 
 <div className="hero-callout">
-  💡{" "}
+  <span className="bulb">💡</span>
   <strong>
     The 3 AM phone call that changed how we think about cloud architecture
     documentation forever.
@@ -343,7 +345,7 @@ I've created a **comprehensive step-by-step tutorial** that walks you through bu
 
 <div className="cta-button">
   <a
-    href="./build-globalconnect-financial-microservices-architecture-tutorial"
+    href="/blog/build-globalconnect-financial-microservices-architecture-tutorial"
     className="btn-primary"
   >
     📚 Read the Complete Tutorial: Building GlobalConnect Platform →
@@ -381,7 +383,7 @@ The GlobalConnect story illustrates a truth every organization with complex clou
 
 Lucidscale transforms cloud architecture from an invisible, ever-changing maze into a clear, interactive map that stays current automatically. For enterprises managing mission-critical infrastructure, this isn't just about prettier diagrams—it's about **confidence**, **compliance**, and **competitive advantage**.
 
-:::question THE CHOICE IS SIMPLE
+⚠️THE CHOICE IS SIMPLE
 Continue fighting the losing battle of manual documentation, or embrace automated visualization that actually works with the dynamic nature of modern cloud infrastructure.
 
 **The question isn't whether you need better architecture visualization. The question is: how much longer can you afford to operate in the dark?**
@@ -394,6 +396,8 @@ Continue fighting the losing battle of manual documentation, or embrace automate
 
 Drop a comment below or connect with me on [LinkedIn](https://linkedin.com/in/yourprofile). I'd love to hear about your cloud architecture challenges and successes.
 
+<GiscusComments />
+
 </div>
 
 <div className="tags-section">
@@ -405,10 +409,18 @@ Drop a comment below or connect with me on [LinkedIn](https://linkedin.com/in/yo
   .hero-callout {
     background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
     color: white;
-    padding: 10px;
+    padding: 20px;
     border-radius: 10px;
     margin: 20px 0;
     font-size: 1.1em;
+    display: flex;
+    align-items: flex-start; /* Aligns bulb with first line of text */
+    gap: 10px; /* Space between bulb and text */
+  }
+
+  .hero-callout .bulb {
+    flex-shrink: 0; /* Prevents bulb from shrinking */
+    font-size: 1.2em;
   }
 
   .stats-grid {
