--- a/docs/How to Build GlobalConnect Financial Services: A Complete Multi-Region Microservices Architecture Tutorial.mdx
+++ b/docs/How to Build GlobalConnect Financial Services: A Complete Multi-Region Microservices Architecture Tutorial.mdx
@@ -1,10 +1,10 @@
----
 # Building GlobalConnect: A Complete Guide to Multi-Region Financial Microservices on AWS
 
 <div className="hero-callout">
   <span className="bulb">🏗️</span>
   <strong>
-    The step-by-step blueprint for building enterprise-grade, multi-region financial services infrastructure that scales to millions of transactions.
+    The step-by-step blueprint for building enterprise-grade, multi-region
+    financial services infrastructure that scales to millions of transactions.
   </strong>
 </div>
 
@@ -23,24 +23,42 @@ By the end of this tutorial, you'll have deployed a production-ready financial s
       <li>Basic Kubernetes knowledge</li>
     </ul>
   </div>
-  
-  <div className="prereq-card time">
-    <h4>⏱️ Time Investment</h4>
-    <ul>
-      <li><strong>Total:</strong> 8-12 hours</li>
-      <li><strong>Phase 1-2:</strong> 3-4 hours (Infrastructure)</li>
-      <li><strong>Phase 3-4:</strong> 3-4 hours (Services)</li>
-      <li><strong>Phase 5-6:</strong> 2-4 hours (Monitoring & DR)</li>
-    </ul>
-  </div>
-  
+
+{" "}
+
+<div className="prereq-card time">
+  <h4>⏱️ Time Investment</h4>
+  <ul>
+    <li>
+      <strong>Total:</strong> 8-12 hours
+    </li>
+    <li>
+      <strong>Phase 1-2:</strong> 3-4 hours (Infrastructure)
+    </li>
+    <li>
+      <strong>Phase 3-4:</strong> 3-4 hours (Services)
+    </li>
+    <li>
+      <strong>Phase 5-6:</strong> 2-4 hours (Monitoring & DR)
+    </li>
+  </ul>
+</div>
+
   <div className="prereq-card cost">
     <h4>💰 AWS Costs</h4>
     <ul>
-      <li><strong>Development:</strong> $200-400/month</li>
-      <li><strong>Production-scale:</strong> $2,000-5,000/month</li>
-      <li><strong>Free tier eligible:</strong> Some services</li>
-      <li><strong>Cost optimization:</strong> Included in tutorial</li>
+      <li>
+        <strong>Development:</strong> $200-400/month
+      </li>
+      <li>
+        <strong>Production-scale:</strong> $2,000-5,000/month
+      </li>
+      <li>
+        <strong>Free tier eligible:</strong> Some services
+      </li>
+      <li>
+        <strong>Cost optimization:</strong> Included in tutorial
+      </li>
     </ul>
   </div>
 </div>
@@ -51,49 +69,63 @@ This tutorial follows **infrastructure-as-code** principles with **production-re
 
 ## Architecture Overview 🏛️
 
-<div className="architecture-summary">
-  <div className="arch-stats">
-    <div className="arch-stat">
-      <div className="number">3</div>
-      <div className="label">AWS Regions</div>
-    </div>
-    <div className="arch-stat">
-      <div className="number">40+</div>
-      <div className="label">Microservices</div>
-    </div>
-    <div className="arch-stat">
-      <div className="number">15min</div>
-      <div className="label">RTO Target</div>
-    </div>
-    <div className="arch-stat">
-      <div className="number">99.99%</div>
-      <div className="label">Availability</div>
-    </div>
-  </div>
+<div className="arch-stats">
+  <div className="arch-stat"><strong>3</strong> AWS Regions</div>
+  <div className="arch-stat"><strong>40+</strong> Microservices</div>
+  <div className="arch-stat"><strong>15min</strong> RTO Target</div>
+  <div className="arch-stat"><strong>99.99%</strong> Availability</div>
 </div>
+.arch-stat {
+  font-size: 1.1rem;
+  margin: 0.5rem 0;
+}
+.arch-stat strong {
+  color: #ff9900;
+}
 
 ### 🗺️ **Regional Strategy**
 
 <div className="region-strategy">
   <div className="strategy-region primary">
     <h4>🇺🇸 US-East-1 (Primary)</h4>
-    <p><strong>Role:</strong> Main trading operations and customer-facing services</p>
-    <p><strong>Services:</strong> All 40+ microservices running at full capacity</p>
-    <p><strong>Data:</strong> Primary databases with real-time replication</p>
+    <p>
+      <strong>Role:</strong> Main trading operations and customer-facing
+      services
+    </p>
+    <p>
+      <strong>Services:</strong> All 40+ microservices running at full capacity
+    </p>
+    <p>
+      <strong>Data:</strong> Primary databases with real-time replication
+    </p>
   </div>
-  
-  <div className="strategy-region secondary">
-    <h4>🌊 US-West-2 (Secondary)</h4>
-    <p><strong>Role:</strong> Hot standby + West Coast low-latency operations</p>
-    <p><strong>Services:</strong> Critical services running, others in standby</p>
-    <p><strong>Data:</strong> Read replicas with <5min RPO</p>
-  </div>
-  
+
+{" "}
+
+<div className="strategy-region secondary">
+  <h4>🌊 US-West-2 (Secondary)</h4>
+  <p>
+    <strong>Role:</strong> Hot standby + West Coast low-latency operations
+  </p>
+  <p>
+    <strong>Services:</strong> Critical services running, others in standby
+  </p>
+  <p>
+    <strong>Data:</strong> Read replicas with &lt;5min RPO
+  </p>
+</div>
+
   <div className="strategy-region tertiary">
     <h4>🇪🇺 EU-West-1 (Compliance)</h4>
-    <p><strong>Role:</strong> European operations with GDPR compliance</p>
-    <p><strong>Services:</strong> EU-specific services + data residency</p>
-    <p><strong>Data:</strong> Isolated EU data with local encryption keys</p>
+    <p>
+      <strong>Role:</strong> European operations with GDPR compliance
+    </p>
+    <p>
+      <strong>Services:</strong> EU-specific services + data residency
+    </p>
+    <p>
+      <strong>Data:</strong> Isolated EU data with local encryption keys
+    </p>
   </div>
 </div>
 
