--- a/docs/How to Build GlobalConnect Financial Services: A Complete Multi-Region Microservices Architecture Tutorial.mdx
+++ b/docs/How to Build GlobalConnect Financial Services: A Complete Multi-Region Microservices Architecture Tutorial.mdx
@@ -13,54 +13,36 @@
 By the end of this tutorial, you'll have deployed a production-ready financial services platform spanning **3 AWS regions** with **40+ microservices**, complete disaster recovery, and enterprise-grade security.
 
 <div className="prerequisites-grid">
-  <div className="prereq-card technical">
-    <h4>🛠️ Technical Requirements</h4>
-    <ul>
-      <li>AWS Account with admin access</li>
-      <li>Terraform v1.0+ installed</li>
-      <li>kubectl and eksctl CLI tools</li>
-      <li>Docker Desktop running</li>
-      <li>Basic Kubernetes knowledge</li>
-    </ul>
-  </div>
+ <div className="prereq-card technical">
+  <h4>🛠️ Technical Requirements</h4>
+  <p>
+    AWS Account with admin access, Terraform v1.0+ installed, kubectl and eksctl CLI tools, Docker Desktop running, and basic Kubernetes knowledge.
+  </p>
+ </div>
 
 {" "}
 
 <div className="prereq-card time">
   <h4>⏱️ Time Investment</h4>
-  <ul>
-    <li>
-      <strong>Total:</strong> 8-12 hours
-    </li>
-    <li>
-      <strong>Phase 1-2:</strong> 3-4 hours (Infrastructure)
-    </li>
-    <li>
-      <strong>Phase 3-4:</strong> 3-4 hours (Services)
-    </li>
-    <li>
-      <strong>Phase 5-6:</strong> 2-4 hours (Monitoring & DR)
-    </li>
-  </ul>
+  <p>
+    <strong>Total:</strong> 8–12 hours, <strong>Phase 1–2:</strong> 3–4 hours
+    (Infrastructure), <strong>Phase 3–4:</strong> 3–4 hours (Services),{" "}
+    <strong>Phase 5–6:</strong> 2–4 hours (Monitoring & DR).
+  </p>
 </div>
 
-  <div className="prereq-card cost">
-    <h4>💰 AWS Costs</h4>
-    <ul>
-      <li>
-        <strong>Development:</strong> $200-400/month
-      </li>
-      <li>
-        <strong>Production-scale:</strong> $2,000-5,000/month
-      </li>
-      <li>
-        <strong>Free tier eligible:</strong> Some services
-      </li>
-      <li>
-        <strong>Cost optimization:</strong> Included in tutorial
-      </li>
-    </ul>
-  </div>
+{" "}
+
+<div className="prereq-card cost">
+  <h4>💰 AWS Costs</h4>
+  <p>
+    <strong>Development:</strong> $200–400/month,{" "}
+    <strong>Production-scale:</strong> $2,000–5,000/month,{" "}
+    <strong>Free tier eligible:</strong> Some services,{" "}
+    <strong>Cost optimization:</strong> Included in tutorial.
+  </p>
+</div>
+
 </div>
 
 :::tip TUTORIAL APPROACH
@@ -69,36 +51,53 @@ This tutorial follows **infrastructure-as-code** principles with **production-re
 
 ## Architecture Overview 🏛️
 
-<div className="arch-stats">
-  <div className="arch-stat"><strong>3</strong> AWS Regions</div>
-  <div className="arch-stat"><strong>40+</strong> Microservices</div>
-  <div className="arch-stat"><strong>15min</strong> RTO Target</div>
-  <div className="arch-stat"><strong>99.99%</strong> Availability</div>
-</div>
-.arch-stat {
-  font-size: 1.1rem;
-  margin: 0.5rem 0;
-}
-.arch-stat strong {
-  color: #ff9900;
-}
+<p className="arch-stats">
+  <strong>3</strong> AWS Regions, <strong>40+</strong> Microservices,{" "}
+  <strong>15min</strong> RTO Target, <strong>99.99%</strong> Availability
+</p>
 
 ### 🗺️ **Regional Strategy**
 
 <div className="region-strategy">
-  <div className="strategy-region primary">
-    <h4>🇺🇸 US-East-1 (Primary)</h4>
-    <p>
-      <strong>Role:</strong> Main trading operations and customer-facing
-      services
-    </p>
-    <p>
-      <strong>Services:</strong> All 40+ microservices running at full capacity
-    </p>
-    <p>
-      <strong>Data:</strong> Primary databases with real-time replication
-    </p>
-  </div>
+
+{" "}
+
+<div className="strategy-region primary">
+  <h4>🇺🇸 US-East-1 (Primary)</h4>
+  <p>
+    <strong>Role:</strong> Main trading operations and customer-facing services
+  </p>
+  <p>
+    <strong>Services:</strong> All 40+ microservices running at full capacity
+  </p>
+  <p>
+    <strong>Data:</strong> Primary databases with real-time replication
+  </p>
+</div>
+<div className="strategy-region secondary">
+  <h4>🌊 US-West-2 (Secondary)</h4>
+  <p>
+    <strong>Role:</strong> Hot standby + West Coast low-latency operations
+  </p>
+  <p>
+    <strong>Services:</strong> Critical services running, others in standby
+  </p>
+  <p>
+    <strong>Data:</strong> Read replicas with &lt;5min RPO
+  </p>
+</div>
+<div className="strategy-region tertiary">
+  <h4>🇪🇺 EU-West-1 (Compliance)</h4>
+  <p>
+    <strong>Role:</strong> European operations with GDPR compliance
+  </p>
+  <p>
+    <strong>Services:</strong> EU-specific services + data residency
+  </p>
+  <p>
+    <strong>Data:</strong> Isolated EU data with local encryption keys
+  </p>
+</div>
 
 {" "}
 
