--- a/docs/How to Build GlobalConnect Financial Services: A Complete Multi-Region Microservices Architecture Tutorial.mdx
+++ b/docs/How to Build GlobalConnect Financial Services: A Complete Multi-Region Microservices Architecture Tutorial.mdx
@@ -59,45 +59,19 @@ This tutorial follows **infrastructure-as-code** principles with **production-re
 ### 🗺️ **Regional Strategy**
 
 <div className="region-strategy">
-
-{" "}
-
-<div className="strategy-region primary">
-  <h4>🇺🇸 US-East-1 (Primary)</h4>
-  <p>
-    <strong>Role:</strong> Main trading operations and customer-facing services
-  </p>
-  <p>
-    <strong>Services:</strong> All 40+ microservices running at full capacity
-  </p>
-  <p>
-    <strong>Data:</strong> Primary databases with real-time replication
-  </p>
-</div>
-<div className="strategy-region secondary">
-  <h4>🌊 US-West-2 (Secondary)</h4>
-  <p>
-    <strong>Role:</strong> Hot standby + West Coast low-latency operations
-  </p>
-  <p>
-    <strong>Services:</strong> Critical services running, others in standby
-  </p>
-  <p>
-    <strong>Data:</strong> Read replicas with &lt;5min RPO
-  </p>
-</div>
-<div className="strategy-region tertiary">
-  <h4>🇪🇺 EU-West-1 (Compliance)</h4>
-  <p>
-    <strong>Role:</strong> European operations with GDPR compliance
-  </p>
-  <p>
-    <strong>Services:</strong> EU-specific services + data residency
-  </p>
-  <p>
-    <strong>Data:</strong> Isolated EU data with local encryption keys
-  </p>
-</div>
+  <div className="strategy-region primary">
+    <h4>🇺🇸 US-East-1 (Primary)</h4>
+    <p>
+      <strong>Role:</strong> Main trading operations and customer-facing
+      services
+    </p>
+    <p>
+      <strong>Services:</strong> All 40+ microservices running at full capacity
+    </p>
+    <p>
+      <strong>Data:</strong> Primary databases with real-time replication
+    </p>
+  </div>
 
 {" "}
 
