--- a/docs/How to Build GlobalConnect Financial Services: A Complete Multi-Region Microservices Architecture Tutorial.mdx
+++ b/docs/How to Build GlobalConnect Financial Services: A Complete Multi-Region Microservices Architecture Tutorial.mdx
@@ -366,6 +366,73 @@ terraform apply
   </div>
 </div>
 
+<style jsx>{`
+  .progress-indicator {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 2rem 0;
+    padding: 1rem;
+    background: #f8fafc;
+    border-radius: 12px;
+    border: 1px solid #e2e8f0;
+  }
+
+  .progress-step {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    flex: 1;
+  }
+
+  .progress-step:not(:last-child)::after {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 50%;
+    width: 100%;
+    height: 2px;
+    background: #e2e8f0;
+    z-index: 1;
+  }
+
+  .progress-step.completed::after {
+    background: #10b981;
+  }
+
+  .step-number {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background: #e2e8f0;
+    color: #64748b;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+    position: relative;
+    z-index: 2;
+  }
+
+  .progress-step.completed .step-number {
+    background: #10b981;
+    color: white;
+  }
+
+  .step-title {
+    font-size: 0.875rem;
+    font-weight: 500;
+    color: #374151;
+    text-align: center;
+  }
+
+  .progress-step.completed .step-title {
+    color: #10b981;
+  }
+`}</style>
+
 ---
 
 ## Phase 2: Kubernetes Infrastructure - EKS Clusters 🚢
