--- a/blog/2025-07-25-From Chaos to Clarity: How Lucidscale Turned Our 40-Service Nightmare Into a Visual Masterpiece.mdx
+++ b/blog/2025-07-25-From Chaos to Clarity: How Lucidscale Turned Our 40-Service Nightmare Into a Visual Masterpiece.mdx
@@ -54,8 +54,8 @@ Picture this: It's **3:17 AM**, and your trading platform just went down. Revenu
     <div className="stat-label">AWS Regions</div>
   </div>
   <div className="stat-card danger">
-    <div className="stat-number">$50k/min</div>
-    <div className="stat-label">Revenue Loss</div>
+    <div className="stat-number">$50k</div>
+    <div className="stat-label">Revenue Loss Every Minute</div>
   </div>
   <div className="stat-card info">
     <div className="stat-number">15min</div>
