--- a/blog/2025-07-08-why-companies-are-leaving-cloud.mdx
+++ b/blog/2025-07-08-why-companies-are-leaving-cloud.mdx
@@ -7,6 +7,7 @@ date: 2025-07-08
 ---
 
 import GiscusComments from "@site/src/components/GiscusComments";
+import Newsletter from "@site/src/components/Newsletter";
 
 # 🌥️ Why Companies Are Leaving the Cloud
 
@@ -141,3 +142,9 @@ Cloud repatriation isn't rebellion — it's a **rebalancing act** where companie
 ## 💬 Comments
 
 <GiscusComments />
+<Newsletter
+  title="🚀 Enjoyed this post?"
+  description="Join our community and get weekly updates!"
+  buttonText="Join Now"
+  theme="secondary"
+/>
